# armcontrolmoveit

./: CMakeLists.txt  package.xml
config/: door_config.yaml  move_group_config.yaml  moveit_rb1.rviz
include/armcontrolmoveit/: ArmControl.h  Door.h  UsefulFunctions.h  VisualTools.h
launch/: armcontrol.launch  armservices.launch  demo.launch  demo_abrirpuerta.launch  demo_opendoor.launch  demo_with_rviz.launch  doorservices.launch  mainscript.launch  moveit.launch  moveit_rviz.launch  planning_context.launch  rb1sim_armcontroller.launch  rb1sim_complete.launch  rb1sim_moveit.launch  rb1sim_myworld.launch  rviz_j2s3s300.launch
msg/: PoseArrayStamped.msg
script/: OpenDoor.py  ServicesClient.py  main.py  plot_data.py
src/: ArmControl.cpp  ArmServices.cpp  Door.cpp  DoorServices.cpp  UsefulFunctions.cpp  VisualTools.cpp  pruebas_trayectorias.cpp
srv/: ChangeTarget.srv  DemoPrecision.srv  ExecuteTarget.srv  GenerarTrayectoriaPuerta.srv  GenerateDoorTrajectory.srv  GirarSistemaPuerta.srv  PlanTrajectory.srv  PosicionApoyo.srv  RotateSystem.srv  SetJointValues.srv  SupportPosition.srv
worlds/: myworld.world
